# atlas

./: CMakeLists.txt
atlas4py/: CMakeLists.txt  README.md  _atlas4py.cpp
src/atlas/: CMakeLists.txt
src/atlas/array/gridtools/: GridToolsArray.cc  GridToolsArrayHelpers.h  GridToolsArrayView.cc  GridToolsIndexView.h  GridToolsMakeView.cc  GridToolsTraits.h
src/atlas/interpolation/method/: PointSet.cc
src/atlas/interpolation/method/fe/: FiniteElement.cc
src/atlas/interpolation/method/knn/: KNearestNeighbours.cc  NearestNeighbour.cc
src/atlas/output/detail/: PointCloudIO.cc
src/tests/: AtlasTestEnvironment.h  CMakeLists.txt
src/tests/acc/: CMakeLists.txt
src/tests/array/: test_array.cc
src/tests/parallel/: test_haloexchange.cc
